Perfetto: Chunk JSON output

Pass JSON strings to the callback (and hence Mojo) once they reach 100kb,
rather than passing one giant string all at once.

BUG=902064

Change-Id: If95811d3ac907d23d2f882e869d88e933ff5d7b0
Reviewed-on: https://chromium-review.googlesource.com/c/1330068
Commit-Queue: oysteine <oysteine@chromium.org>
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607060}
Former-commit-id: d1ed027ee25d2b4f4de591bdce93bcf8dc651ba5